add upload; change AQI
